<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<properties>
		<java.version>21</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<maven-compiler-plugin-version>3.13.0</maven-compiler-plugin-version>
		<maven-surefire-plugin-version>3.5.2</maven-surefire-plugin-version>
		<maven-assembly-plugin-version>3.7.1</maven-assembly-plugin-version>
		<maven-gpg-plugin-version>3.2.7</maven-gpg-plugin-version>
		<maven-source-plugin-version>3.3.1</maven-source-plugin-version>
		
		<jmh.version>1.37</jmh.version>
		
		<child-build-dir>../target</child-build-dir>
	</properties>
	
	<groupId>lapissea.jdatablockfs</groupId>
	<artifactId>JDatablockFS</artifactId>
	<packaging>pom</packaging>
	
	<version>1.0</version>
	
	<modules>
		<module>/jdbfs-core</module>
		<module>/jdbfs-run</module>
		<module>/jdbfs-tools</module>
		<module>Jorth</module>
		<module>Fuzzer</module>
		<module>demos/Photos</module>
		<module>demos/World</module>
	</modules>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.github.lapissea</groupId>
				<artifactId>jlapisutil</artifactId>
				<version>1.2.2</version>
			</dependency>
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>7.10.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openjdk.jmh</groupId>
				<artifactId>jmh-core</artifactId>
				<version>${jmh.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openjdk.jmh</groupId>
				<artifactId>jmh-generator-annprocess</artifactId>
				<version>${jmh.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.27.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.11.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
